# ChangeLog for gnome-extra/libgnomedb
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgnomedb/ChangeLog,v 1.25 2004/08/14 23:36:05 slarti Exp $

  15 Aug 2004; Tom Martin <slarti@gentoo.org> libgnomedb-1.0.4.ebuild:
  Marked ~amd64.

  08 Aug 2004; Tony Vroon <chainsaw@gentoo.org>
  +files/libgnomedb-1.0.3-gcc34.patch, libgnomedb-1.0.3.ebuild,
  libgnomedb-1.0.4.ebuild:
  Fix GCC 3.4 compilation. Patch by Robert Moss <robmoss@gentoo.org>.

*libgnomedb-1.0.4 (05 Aug 2004)

  05 Aug 2004; Alastair Tse <liquidx@gentoo.org>
  +files/libgnomedb-1.0.4-selector.patch, -libgnomedb-1.0.0.ebuild,
  -libgnomedb-1.0.2.ebuild, +libgnomedb-1.0.4.ebuild:
  cleanup. new version thanks to Robert Davis <rdavis@unico.com> (#48611)

  29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  libgnomedb-0.12.1.ebuild, libgnomedb-1.0.0.ebuild, libgnomedb-1.0.1.ebuild,
  libgnomedb-1.0.2.ebuild:
  Masked libgnomedb-1.0.2.ebuild stable for ppc

  29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  libgnomedb-0.12.1.ebuild, libgnomedb-1.0.0.ebuild, libgnomedb-1.0.1.ebuild:
  Masked libgnomedb-1.0.1.ebuild stable for ppc

  29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  libgnomedb-0.12.1.ebuild, libgnomedb-1.0.0.ebuild:
  Masked libgnomedb-1.0.0.ebuild stable for ppc

  29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  libgnomedb-0.12.1.ebuild:
  Masked libgnomedb-0.12.1.ebuild stable for ppc

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> libgnomedb-1.0.3.ebuild:
  Add inherit eutils

  02 Apr 2004; L. Boshell <leonardop@gentoo.org> libgnomedb-1.0.3.ebuild,
  files/libgnomedb-1.0.3-gtkdoc_fix.patch:
  Added patch to avoid gtk-doc problems. Closes bug #46275.

  17 Feb 2004; Aron Griffis <agriffis@gentoo.org> libgnomedb-1.0.1.ebuild,
  libgnomedb-1.0.3.ebuild:
  add alpha and ia64 keywords

*libgnomedb-1.0.3 (06 Feb 2004)
