@@ -1,23 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+MD5 137be40cc900c34f89a15b1e3e6acffa ChangeLog 4378
+MD5 5338564d27c9ab0fdd3399d19d73edf6 libgnomedb-0.12.1.ebuild 1196
 MD5 d65098e3a9bb9b1ae8532658be499240 libgnomedb-1.0.1.ebuild 1260
 MD5 c1e897d17fe124f61d3719c56a483626 libgnomedb-1.0.3.ebuild 1475
-MD5 5338564d27c9ab0fdd3399d19d73edf6 libgnomedb-0.12.1.ebuild 1196
-MD5 b03f285287ef320b88aefd3be472a825 libgnomedb-1.0.4.ebuild 1574
-MD5 572bd6d9b7356808d7073cefb3467761 ChangeLog 4210
+MD5 158f8edb15219409c0b0c4ebbad1251b libgnomedb-1.0.4.ebuild 1576
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 d48a0cec30d90af0c488dc4dbfc3e1a3 files/digest-libgnomedb-0.12.1 70
-MD5 37d21bd238913942c2c2815c0ae80041 files/libgnomedb-1.0.4-selector.patch 803
-MD5 23a9e466fd3a5b35ebc66463564821b0 files/libgnomedb-1.0.3-gcc34.patch 656
-MD5 fa2e6e3b60ec75a5aca6665636c10540 files/libgnomedb-1.0.3-gtkdoc_fix.patch 1472
 MD5 5cd64f762a82a44123610969ca055ed7 files/digest-libgnomedb-1.0.1 69
 MD5 d3ea318bdd4fd8f3725f0d9cb1a38b23 files/digest-libgnomedb-1.0.3 69
 MD5 e91ab2cfd3b938f9c09d5587f8653cf6 files/digest-libgnomedb-1.0.4 69
+MD5 23a9e466fd3a5b35ebc66463564821b0 files/libgnomedb-1.0.3-gcc34.patch 656
+MD5 fa2e6e3b60ec75a5aca6665636c10540 files/libgnomedb-1.0.3-gtkdoc_fix.patch 1472
+MD5 37d21bd238913942c2c2815c0ae80041 files/libgnomedb-1.0.4-selector.patch 803
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.2.5 (GNU/Linux)
+Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFBHqHxCHk4+ZoBpvsRAkoPAJ9UXBG4RoIZJt5MwpFgCrU3O+LXLgCfUQ1K
-ybVPpO2kH3gZI/nai8lw6cQ=
-=Z5Jg
+iD8DBQFBeL1vRkyva5PS18kRAoaFAJ99WGlryjcaKzgTEwLWZJmEm4tGNACfZPr7
+hRBgiC9fuYegN9NVP/uYgVI=
+=whWJ
 -----END PGP SIGNATURE-----
